fix toggle display on mobile query

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -34,8 +34,6 @@ header {
 header a {
     text-decoration: none;
 }
-
-
 .navbar li {
     letter-spacing: 4px;
     list-style-type: none;
@@ -44,7 +42,6 @@ header a {
     margin-right: 30px;
     display: inline-block;
 }
-
 .navbar li a {
     color: inherit
 }
@@ -52,24 +49,15 @@ header a {
     color: #eb0e0e;
     font-size: 120%;
 }
-#nav-toggle:checked~nav {
-    display: none;
-}
-
-#nav-toggle {
-    display: none;
-}
-
-.nav-toggle-label {
-    display: none;
-}
-
 #logo {
     font-family: 'Archivo Black', sans-serif;
     color: black;
     font-size: 300%;
     letter-spacing: 4px;
 }
+
+
+
 /* Main*/
 Main { 
     /*make the main content take up unused space to push footer down*/
@@ -147,6 +135,11 @@ Main {
     }
     .nav-toggle-label {
         font-size: 2rem;
+    }
+    #about {
+        padding: 20px 10px;
+        vertical-align: baseline;
+        font-size: 100%;
     }
     
 }
